# synthpose-blender

./: .gitignore  CLAUDE.md  LICENSE  README.md
.github/workflows/: pylint.yml
dataset_generator/: .gitignore  README.md  pyproject.toml  requirements.txt
dataset_generator/blender/: blender_camera.py  blender_scene_randomizer.py  create_nao_armature.py  dataset_generator_blender.py  dataset_generator_phobos.py  extract_nao_meshes.py  nao_blender.blend  nao_full.blend  nao_poser_blender.py  nao_poser_phobos.py  nao_rig.blend  overlay_multi.py  overlay_phobos.py  overlay_test.py  render_preview.py  render_test.py  test_poser.py
dataset_generator/blender/meshes_V40_obj/: nao.mtl
dataset_generator/config/: camera.yaml  dataset.yaml  randomization.yaml
dataset_generator/controllers/dataset_generator/: dataset_generator.py
dataset_generator/docs/: datasheet.md  keypoint_mapping.md  pipeline.md
dataset_generator/notebooks/: analyze_model.ipynb  kaggle_generate_dataset.ipynb
dataset_generator/protos/: MyNao.proto  Nao.proto  NaoLeftWristH25Realistic.proto  NaoRightWristH25Realistic.proto  nao_exported.urdf
dataset_generator/scripts/: merge_datasets.py  monitor.py  train.py  validate_dataset.py  visualize_sample.py
dataset_generator/src/nao_coco_pose/: __init__.py  camera.py  coco_writer.py  config.py  keypoints.py  nao_landmarks.py  projection.py  randomization.py  sharding.py  visibility.py
dataset_generator/worlds/: .dataset.wbproj  dataset.wbt
