[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nao-coco-pose"
version = "0.1.0"
description = "Geração de dataset sintético COCO-pose para o NAO no Webots"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "pyyaml>=6.0", "opencv-python>=4.8", "pycocotools>=2.0.7"]

[tool.setuptools.packages.find]
where = ["src"]
