[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nao-coco-pose"
version = "0.1.0"
description = "Geração de dataset sintético COCO-pose para o NAO no Webots"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "pyyaml>=6.0", "opencv-python>=4.8", "pycocotools>=2.0.7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pylint.main]
# cv2 é extensão C: o pylint não introspecta seus membros (E1101 falso-positivo).
extension-pkg-allow-list = ["cv2"]

[tool.pylint.typecheck]
# cv2 carrega membros dinamicamente; suprime no-member falso-positivo.
generated-members = ["cv2.*"]

[tool.pylint.basic]
# Nomes de 1-2 letras convencionais no domínio: matriz intrínseca K, rotação R,
# escala S, dimensões de imagem/heatmap W/H, coordenadas e índices.
good-names = ["K", "R", "S", "W", "H", "B", "i", "j", "k", "n", "r", "x", "y", "z", "u", "v", "d"]
